--- a/burn-temps/index.html
+++ b/burn-temps/index.html
@@ -11,6 +11,20 @@
 <body>
     <header>
         <h1>Burn Temps</h1>
+        <svg id="refreshIcon"
+             viewBox="0 0 24 24"
+             fill="none"
+             stroke="currentColor"
+             stroke-width="2"
+             stroke-linecap="round"
+             stroke-linejoin="round"
+             class="refresh-icon"
+             onclick="fetchRecords()">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4" />
+            <path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4" />
+        </svg>
+
     </header>
     <main>
         <div class="table-container">
@@ -52,6 +66,17 @@
         </form>
         <button id="trackButton" onclick="track()">Track</button>
     </footer>
+
+    <!-- The Modal -->
+    <div id="apiKeyModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2>Enter API Key</h2>
+            <input type="text" id="apiKeyInput" placeholder="Enter your API key">
+            <button onclick="saveApiKey()">Save</button>
+        </div>
+    </div>
+
     <script type="module" src="js/app.js"></script>
 </body>
 </html>
