--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 </head>
 <body>
     <main>
-        <a href="/app1">App 1</a>
-        <a href="/app2">App 2</a>
+        <a href="/burn-temps">Burn Temps</a>
     </main>
 </body>
 </html>
