--- a/burn-temps/index.html
+++ b/burn-temps/index.html
@@ -1,82 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/icons/icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="36x36" href="images/icons/icon-36x36.png">
-    <title>Burn Temps</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="manifest" href="manifest.json">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/icons/icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="36x36" href="images/icons/icon-36x36.png">
+  <title>Burn Temps</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
-    <header>
-        <h1>Burn Temps</h1>
-        <svg id="refreshIcon"
-             viewBox="0 0 24 24"
-             fill="none"
-             stroke="currentColor"
-             stroke-width="2"
-             stroke-linecap="round"
-             stroke-linejoin="round"
-             class="refresh-icon"
-             onclick="fetchRecords()">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4" />
-            <path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4" />
-        </svg>
+<header>
+  <h1>Burn Temps</h1>
+    <a href="/graph.html">
+      <svg id="graphIcon"
+           viewBox="0 0 24 24"
+           fill="none"
+           stroke="#fff"
+           stroke-width="2"
+           stroke-linecap="round"
+           stroke-linejoin="round"
+           class="graph-icon">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M4 18v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"/>
+          <path d="M7 14l3 -3l2 2l3 -3l2 2"/>
+      </svg>
+    </a>
+  <svg id="refreshIcon"
+       viewBox="0 0 24 24"
+       fill="none"
+       stroke="currentColor"
+       stroke-width="2"
+       stroke-linecap="round"
+       stroke-linejoin="round"
+       class="refresh-icon"
+       onclick="fetchRecords()">
+    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+    <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4"/>
+    <path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4"/>
+  </svg>
 
-    </header>
-    <main>
-        <div class="table-container">
-            <table id="recordsTable">
-                <thead>
-                <tr>
-                    <th>Time</th>
-                    <th>Temp 1</th>
-                    <th>Temp 2</th>
-                    <th>Temp 3</th>
-                </tr>
-                </thead>
-                <tbody>
-                <!-- Data rows will be inserted here dynamically -->
-                </tbody>
-            </table>
-        </div>
-    </main>
-    <footer>
-        <form class="form-input" onsubmit="event.preventDefault();">
-           <div class="stepper">
-                <label for="temp1">Temp1</label>
-                <button class="stepper-btn" onclick="changeValue('temp1',1)">+</button>
-                <input type="number" id="temp1" value="0" min="0" max="1300">
-                <button class="stepper-btn" onclick="changeValue('temp1',-1)">-</button>
-            </div>
-            <div class="stepper">
-                <label for="temp2">Temp2</label>
-                <button class="stepper-btn" onclick="changeValue('temp2',1)">+</button>
-                <input type="number" id="temp2" value="0" min="0" max="1300">
-                <button class="stepper-btn" onclick="changeValue('temp2',-1)">-</button>
-            </div>
-            <div class="stepper">
-                <label for="temp3">Temp3</label>
-                <button class="stepper-btn" onclick="changeValue('temp3',1)">+</button>
-                <input type="number" id="temp3" value="0" min="0" max="1300">
-                <button class="stepper-btn" onclick="changeValue('temp3',-1)">-</button>
-            </div>
-        </form>
-        <button id="trackButton" onclick="track()">Track</button>
-    </footer>
-
-    <!-- The Modal -->
-    <div id="apiKeyModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal()">&times;</span>
-            <h2>Enter API Key</h2>
-            <input type="text" id="apiKeyInput" placeholder="Enter your API key">
-            <button onclick="saveApiKey()">Save</button>
-        </div>
+</header>
+<main>
+  <div class="table-container">
+    <table id="recordsTable">
+      <thead>
+      <tr>
+        <th>Time</th>
+        <th>Temp 1</th>
+        <th>Temp 2</th>
+        <th>Temp 3</th>
+      </tr>
+      </thead>
+      <tbody>
+      <!-- Data rows will be inserted here dynamically -->
+      </tbody>
+    </table>
+  </div>
+</main>
+<footer>
+  <form class="form-input" onsubmit="event.preventDefault();">
+    <div class="stepper">
+      <label for="temp1">Temp1</label>
+      <button class="stepper-btn" onclick="changeValue('temp1',1)">+</button>
+      <input type="number" id="temp1" value="0" min="0" max="1300">
+      <button class="stepper-btn" onclick="changeValue('temp1',-1)">-</button>
     </div>
+    <div class="stepper">
+      <label for="temp2">Temp2</label>
+      <button class="stepper-btn" onclick="changeValue('temp2',1)">+</button>
+      <input type="number" id="temp2" value="0" min="0" max="1300">
+      <button class="stepper-btn" onclick="changeValue('temp2',-1)">-</button>
+    </div>
+    <div class="stepper">
+      <label for="temp3">Temp3</label>
+      <button class="stepper-btn" onclick="changeValue('temp3',1)">+</button>
+      <input type="number" id="temp3" value="0" min="0" max="1300">
+      <button class="stepper-btn" onclick="changeValue('temp3',-1)">-</button>
+    </div>
+  </form>
+  <button id="trackButton" onclick="track()">Track</button>
+</footer>
 
-    <script type="module" src="js/app.js"></script>
+<!-- The Modal -->
+<div id="apiKeyModal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <h2>Enter API Key</h2>
+    <input type="text" id="apiKeyInput" placeholder="Enter your API key">
+    <button onclick="saveApiKey()">Save</button>
+  </div>
+</div>
+
+<script type="module" src="js/app.js"></script>
 </body>
 </html>
