fix: update graph link in index.html
- change graph link to /burn-temps/graph.html

--- a/burn-temps/index.html
+++ b/burn-temps/index.html
@@ -12,7 +12,7 @@
 <body>
 <header>
   <h1>Burn Temps</h1>
-    <a href="/graph.html">
+    <a href="/burn-temps/graph.html">
       <svg id="graphIcon"
            viewBox="0 0 24 24"
            fill="none"
