feat: add Burn Number functionality
- Update `.gitignore` to exclude `Caddyfile`
- Add HTML and CSS for burn number modal
- Modify `fetchAllRecords` to include burn number filter
- Refactor modals and navigation in HTML and CSS
- Enhance script to handle Burn Number storage and validation

--- a/burn-temps/graph.html
+++ b/burn-temps/graph.html
@@ -1,29 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/icons/icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="36x36" href="images/icons/icon-36x36.png">
-    <title>Burn Graph</title>
-    <link rel="stylesheet" href="css/modal.css">
-    <link rel="stylesheet" href="css/graph.css">
-    <link rel="manifest" href="manifest.json">
-    <script src="https://cdn.plot.ly/plotly-2.34.0.min.js" charset="utf-8"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/icons/icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="36x36" href="images/icons/icon-36x36.png">
+  <title>Burn Graph</title>
+  <link rel="stylesheet" href="css/modal.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/graph.css">
+  <link rel="manifest" href="manifest.json">
+  <script src="https://cdn.plot.ly/plotly-2.34.0.min.js" charset="utf-8"></script>
 </head>
 <body>
-    <div id="graph"></div>
+<header>
+  <a href="/burn-temps">
+    <h1>Burn Temps</h1>
+  </a>
+<!--  <svg id="addIcon"-->
+<!--       viewBox="0 0 24 24"-->
+<!--       fill="none"-->
+<!--       stroke="currentColor"-->
+<!--       stroke-width="2"-->
+<!--       stroke-linecap="round"-->
+<!--       stroke-linejoin="round"-->
+<!--       class="icon add-icon">-->
+<!--    <path stroke="none" d="M0 0h24v24H0z" fill="none" />-->
+<!--    <path d="M12.5 21h-7.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v7.5" />-->
+<!--    <path d="M3 10h18" />-->
+<!--    <path d="M10 3v18" />-->
+<!--    <path d="M16 19h6" />-->
+<!--    <path d="M19 16v6" />-->
+<!--  </svg>-->
+<!--  <a href="/burn-temps/graph.html">-->
+<!--    <svg id="graphIcon"-->
+<!--         viewBox="0 0 24 24"-->
+<!--         fill="none"-->
+<!--         stroke="#fff"-->
+<!--         stroke-width="2"-->
+<!--         stroke-linecap="round"-->
+<!--         stroke-linejoin="round"-->
+<!--         class="icon graph-icon">-->
+<!--      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>-->
+<!--      <path d="M4 18v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"/>-->
+<!--      <path d="M7 14l3 -3l2 2l3 -3l2 2"/>-->
+<!--    </svg>-->
+<!--  </a>-->
+<!--  <svg id="refreshIcon"-->
+<!--       viewBox="0 0 24 24"-->
+<!--       fill="none"-->
+<!--       stroke="currentColor"-->
+<!--       stroke-width="2"-->
+<!--       stroke-linecap="round"-->
+<!--       stroke-linejoin="round"-->
+<!--       class="icon refresh-icon"-->
+<!--       onclick="fetchRecords()">-->
+<!--    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>-->
+<!--    <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4"/>-->
+<!--    <path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4"/>-->
+<!--  </svg>-->
 
-    <!-- The Modal -->
-    <div id="apiKeyModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal()">&times;</span>
-            <h2>Enter API Key</h2>
-            <input type="text" id="apiKeyInput" placeholder="Enter your API key">
-            <button onclick="saveApiKey()">Save</button>
-        </div>
-    </div>
+</header>
+<div id="graph"></div>
 
-    <script type="module" src="js/modal.js"></script>
-    <script type="module" src="js/graph.js"></script>
+<!-- The Modal -->
+<div id="apiKeyModal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <h2>Enter API Key</h2>
+    <input type="text" id="apiKeyInput" placeholder="Enter your API key">
+    <button onclick="saveApiKey()">Save</button>
+  </div>
+</div>
+
+<script type="module" src="js/modal.js"></script>
+<script type="module" src="js/graph.js"></script>
 </body>
 </html>
