--- a/burn-temps/index.html
+++ b/burn-temps/index.html
@@ -6,26 +6,46 @@
   <link rel="apple-touch-icon" sizes="180x180" href="images/icons/icon-192x192.png">
   <link rel="icon" type="image/png" sizes="36x36" href="images/icons/icon-36x36.png">
   <title>Burn Temps</title>
+  <link rel="stylesheet" href="css/modal.css">
+  <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
 <header>
-  <h1>Burn Temps</h1>
-    <a href="/burn-temps/graph.html">
-      <svg id="graphIcon"
-           viewBox="0 0 24 24"
-           fill="none"
-           stroke="#fff"
-           stroke-width="2"
-           stroke-linecap="round"
-           stroke-linejoin="round"
-           class="graph-icon">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-          <path d="M4 18v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"/>
-          <path d="M7 14l3 -3l2 2l3 -3l2 2"/>
-      </svg>
-    </a>
+  <a href="/burn-temps">
+    <h1>Burn Temps</h1>
+  </a>
+  <svg id="addIcon"
+      viewBox="0 0 24 24"
+      fill="none"
+      stroke="currentColor"
+      stroke-width="2"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="icon add-icon"
+       onclick="showModal('burnNumberModal')">
+    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+    <path d="M12.5 21h-7.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v7.5" />
+    <path d="M3 10h18" />
+    <path d="M10 3v18" />
+    <path d="M16 19h6" />
+    <path d="M19 16v6" />
+  </svg>
+  <a href="/burn-temps/graph.html">
+    <svg id="graphIcon"
+         viewBox="0 0 24 24"
+         fill="none"
+         stroke="#fff"
+         stroke-width="2"
+         stroke-linecap="round"
+         stroke-linejoin="round"
+         class="icon graph-icon">
+      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+      <path d="M4 18v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"/>
+      <path d="M7 14l3 -3l2 2l3 -3l2 2"/>
+    </svg>
+  </a>
   <svg id="refreshIcon"
        viewBox="0 0 24 24"
        fill="none"
@@ -33,7 +53,7 @@
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
-       class="refresh-icon"
+       class="icon refresh-icon"
        onclick="fetchRecords()">
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
     <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4"/>
@@ -82,16 +102,27 @@
   <button id="trackButton" onclick="track()">Track</button>
 </footer>
 
-<!-- The Modal -->
+<!-- The API KEY Modal -->
 <div id="apiKeyModal" class="modal">
   <div class="modal-content">
-    <span class="close" onclick="closeModal()">&times;</span>
+    <span class="close" onclick="closeModal('apiKeyModal')">&times;</span>
     <h2>Enter API Key</h2>
     <input type="text" id="apiKeyInput" placeholder="Enter your API key">
     <button onclick="saveApiKey()">Save</button>
   </div>
 </div>
 
+<!-- The Burn Number Modal -->
+<div id="burnNumberModal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal('burnNumberModal')">&times;</span>
+    <h2>Enter Burn Number</h2>
+    <input type="number" id="burnNumberInput" placeholder="Enter burn number">
+    <button onclick="setBurnNumber()">Save</button>
+  </div>
+</div>
+
+<script type="module" src="js/modal.js"></script>
 <script type="module" src="js/app.js"></script>
 </body>
 </html>
