feat: display burn number in header
- Display burn number in header after setting
- Ensure <a> tags have no underline in header CSS

--- a/burn-temps/index.html
+++ b/burn-temps/index.html
@@ -14,7 +14,7 @@
 <body>
 <header>
   <a href="/burn-temps">
-    <h1>Burn Temps</h1>
+    <h1>Burn Temps<span id="burnNumber"></span></h1>
   </a>
   <svg id="addIcon"
       viewBox="0 0 24 24"
