refactor(burn-temps): - rename modal functions in index.html - move burn number modal logic to burnNumberModal.js

--- a/burn-temps/index.html
+++ b/burn-temps/index.html
@@ -24,7 +24,7 @@
       stroke-linecap="round"
       stroke-linejoin="round"
       class="icon add-icon"
-       onclick="showModal('burnNumberModal')">
+       onclick="showBurnNumberModal()">
     <path stroke="none" d="M0 0h24v24H0z" fill="none" />
     <path d="M12.5 21h-7.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v7.5" />
     <path d="M3 10h18" />
@@ -115,7 +115,7 @@
 <!-- The Burn Number Modal -->
 <div id="burnNumberModal" class="modal">
   <div class="modal-content">
-    <span class="close" onclick="closeModal('burnNumberModal')">&times;</span>
+    <span class="close" onclick="closeBurnNumberModal()">&times;</span>
     <h2>Enter Burn Number</h2>
     <input type="number" id="burnNumberInput" placeholder="Enter burn number">
     <button onclick="setBurnNumber()">Save</button>
