--- a/burn-temps/index.html
+++ b/burn-temps/index.html
@@ -65,12 +65,12 @@
   <div class="table-container">
     <table id="recordsTable">
       <thead>
-      <tr>
-        <th>Time</th>
-        <th>Temp 1</th>
-        <th>Temp 2</th>
-        <th>Temp 3</th>
-      </tr>
+        <tr>
+          <th>Time</th>
+          <th>Display</th>
+          <th>Sidehull</th>
+          <th>Topphull</th>
+        </tr>
       </thead>
       <tbody>
       <!-- Data rows will be inserted here dynamically -->
@@ -81,22 +81,22 @@
 <footer>
   <form class="form-input" onsubmit="event.preventDefault();">
     <div class="stepper">
-      <label for="temp1">Temp1</label>
-      <button class="stepper-btn" onclick="changeValue('temp1',1)">+</button>
-      <input type="number" id="temp1" value="0" min="0" max="1300">
-      <button class="stepper-btn" onclick="changeValue('temp1',-1)">-</button>
+      <label for="displayInput">Display</label>
+      <button class="stepper-btn" onclick="changeValue('displayInput',1)">+</button>
+      <input type="number" id="displayInput" value="0" min="0" max="1300">
+      <button class="stepper-btn" onclick="changeValue('displayInput',-1)">-</button>
     </div>
     <div class="stepper">
-      <label for="temp2">Temp2</label>
-      <button class="stepper-btn" onclick="changeValue('temp2',1)">+</button>
-      <input type="number" id="temp2" value="0" min="0" max="1300">
-      <button class="stepper-btn" onclick="changeValue('temp2',-1)">-</button>
+      <label for="sideInput">Sidehull</label>
+      <button class="stepper-btn" onclick="changeValue('sideInput',1)">+</button>
+      <input type="number" id="sideInput" value="0" min="0" max="1300">
+      <button class="stepper-btn" onclick="changeValue('sideInput',-1)">-</button>
     </div>
     <div class="stepper">
-      <label for="temp3">Temp3</label>
-      <button class="stepper-btn" onclick="changeValue('temp3',1)">+</button>
-      <input type="number" id="temp3" value="0" min="0" max="1300">
-      <button class="stepper-btn" onclick="changeValue('temp3',-1)">-</button>
+      <label for="topInput">Topphull</label>
+      <button class="stepper-btn" onclick="changeValue('topInput',1)">+</button>
+      <input type="number" id="topInput" value="0" min="0" max="1300">
+      <button class="stepper-btn" onclick="changeValue('topInput',-1)">-</button>
     </div>
   </form>
   <button id="trackButton" onclick="track()">Track</button>
@@ -122,6 +122,7 @@
   </div>
 </div>
 
+<script type="module" src="js/burnNumberModal.js"></script>
 <script type="module" src="js/modal.js"></script>
 <script type="module" src="js/app.js"></script>
 </body>
