--- a/burn-temps/index.html
+++ b/burn-temps/index.html
@@ -105,7 +105,7 @@
 <!-- The API KEY Modal -->
 <div id="apiKeyModal" class="modal">
   <div class="modal-content">
-    <span class="close" onclick="closeModal('apiKeyModal')">&times;</span>
+    <span class="close" onclick="closeApiKeyModal()">&times;</span>
     <h2>Enter API Key</h2>
     <input type="text" id="apiKeyInput" placeholder="Enter your API key">
     <button onclick="saveApiKey()">Save</button>
@@ -122,8 +122,8 @@
   </div>
 </div>
 
+<script type="module" src="js/apiKeyModal.js"></script>
 <script type="module" src="js/burnNumberModal.js"></script>
-<script type="module" src="js/modal.js"></script>
 <script type="module" src="js/app.js"></script>
 </body>
 </html>
