--- a/burn-temps/index.html
+++ b/burn-temps/index.html
@@ -6,12 +6,18 @@
   <link rel="apple-touch-icon" sizes="180x180" href="images/icons/icon-192x192.png">
   <link rel="icon" type="image/png" sizes="36x36" href="images/icons/icon-36x36.png">
   <title>Burn Temps</title>
+  <meta name="description" content="Track burn temps for the oven">
+  <meta name="author" content="Bjørn Kristian Punsvik">
+  <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/modal.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="manifest" href="manifest.json">
+
+
 </head>
 <body>
+
 <header>
   <a href="/burn-temps">
     <h1>Burn Temps<span id="burnNumber"></span></h1>
