--- a/burn-temps/index.html
+++ b/burn-temps/index.html
@@ -3,18 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="apple-touch-icon" sizes="180x180" href="images/icons/icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="36x36" href="images/icons/icon-36x36.png">
+
+  <!-- PWA Icons -->
+  <link rel="icon" href="images/icons/flame-gradient-48x48.png" sizes="48x48" type="image/png">
+  <link rel="icon" href="images/icons/flame-gradient-72x72.png" sizes="72x72" type="image/png">
+  <link rel="icon" href="images/icons/flame-gradient-96x96.png" sizes="96x96" type="image/png">
+  <link rel="icon" href="images/icons/flame-gradient-128x128.png" sizes="128x128" type="image/png">
+  <link rel="icon" href="images/icons/flame-gradient-144x144.png" sizes="144x144" type="image/png">
+  <link rel="icon" href="images/icons/flame-gradient-192x192.png" sizes="192x192" type="image/png">
+  <link rel="icon" href="images/icons/flame-gradient-256x256.png" sizes="256x256" type="image/png">
+  <link rel="icon" href="images/icons/flame-gradient-512x512.png" sizes="512x512" type="image/png">
+
+  <!-- Apple Touch Icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="images/icons/flame-gradient-180x180.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="images/icons/flame-gradient-152x152.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="images/icons/flame-gradient-144x144.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="images/icons/flame-gradient-120x120.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="images/icons/flame-gradient-76x76.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="images/icons/flame-gradient-60x60.png">
+
   <title>Burn Temps</title>
   <meta name="description" content="Track burn temps for the oven">
   <meta name="author" content="Bjørn Kristian Punsvik">
+  <meta name="theme-color" content="#000000">
+
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/modal.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/styles.css">
+
   <link rel="manifest" href="manifest.json">
-
-
 </head>
 <body>
 
