chore: remove unused icons & update manifest
- Remove flame-72x72.png and flame-152x152.png icons
- Update index.html to remove references to deleted icons
- Add new properties and categories to manifest.json
- Update generate-icons.sh to exclude removed icon sizes

--- a/burn-temps/index.html
+++ b/burn-temps/index.html
@@ -6,7 +6,6 @@
 
   <!-- PWA Icons -->
   <link rel="icon" href="images/icons/flame-gradient-48x48.png" sizes="48x48" type="image/png">
-  <link rel="icon" href="images/icons/flame-gradient-72x72.png" sizes="72x72" type="image/png">
   <link rel="icon" href="images/icons/flame-gradient-96x96.png" sizes="96x96" type="image/png">
   <link rel="icon" href="images/icons/flame-gradient-128x128.png" sizes="128x128" type="image/png">
   <link rel="icon" href="images/icons/flame-gradient-144x144.png" sizes="144x144" type="image/png">
@@ -16,7 +15,6 @@
 
   <!-- Apple Touch Icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/icons/flame-gradient-180x180.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="images/icons/flame-gradient-152x152.png">
   <link rel="apple-touch-icon" sizes="144x144" href="images/icons/flame-gradient-144x144.png">
   <link rel="apple-touch-icon" sizes="120x120" href="images/icons/flame-gradient-120x120.png">
   <link rel="apple-touch-icon" sizes="76x76" href="images/icons/flame-gradient-76x76.png">
@@ -26,6 +24,8 @@
   <meta name="description" content="Track burn temps for the oven">
   <meta name="author" content="Bjørn Kristian Punsvik">
   <meta name="theme-color" content="#000000">
+  <link rel="shortcut icon" href="images/icons/flame-gradient-96x96.png">
+
 
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/modal.css">
@@ -33,6 +33,7 @@
   <link rel="stylesheet" href="css/styles.css">
 
   <link rel="manifest" href="manifest.json">
+  <script async src="https://cdn.jsdelivr.net/npm/pwacompat" crossorigin="anonymous"></script>
 </head>
 <body>
 
