--- a/burn-temps/index.html
+++ b/burn-temps/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,120 +35,102 @@
   <link rel="manifest" href="manifest.json">
   <script async src="https://cdn.jsdelivr.net/npm/pwacompat" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
-<header>
-  <a href="/burn-temps">
-    <h1>Burn Temps<span id="burnNumber"></span></h1>
-  </a>
-  <svg id="addIcon"
-      viewBox="0 0 24 24"
-      fill="none"
-      stroke="currentColor"
-      stroke-width="2"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      class="icon add-icon"
-       onclick="showBurnNumberModal()">
-    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-    <path d="M12.5 21h-7.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v7.5" />
-    <path d="M3 10h18" />
-    <path d="M10 3v18" />
-    <path d="M16 19h6" />
-    <path d="M19 16v6" />
-  </svg>
-  <a href="/burn-temps/graph.html">
-    <svg id="graphIcon"
-         viewBox="0 0 24 24"
-         fill="none"
-         stroke="#fff"
-         stroke-width="2"
-         stroke-linecap="round"
-         stroke-linejoin="round"
-         class="icon graph-icon">
-      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-      <path d="M4 18v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"/>
-      <path d="M7 14l3 -3l2 2l3 -3l2 2"/>
+  <header>
+    <a href="/burn-temps">
+      <h1>Burn Temps<span id="burnNumber"></span></h1>
+    </a>
+    <svg id="addIcon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+      stroke-linejoin="round" class="icon add-icon" onclick="showBurnNumberModal()">
+      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+      <path d="M12.5 21h-7.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v7.5" />
+      <path d="M3 10h18" />
+      <path d="M10 3v18" />
+      <path d="M16 19h6" />
+      <path d="M19 16v6" />
     </svg>
-  </a>
-  <svg id="refreshIcon"
-       viewBox="0 0 24 24"
-       fill="none"
-       stroke="currentColor"
-       stroke-width="2"
-       stroke-linecap="round"
-       stroke-linejoin="round"
-       class="icon refresh-icon"
-       onclick="fetchRecords()">
-    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-    <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4"/>
-    <path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4"/>
-  </svg>
+    <a href="/burn-temps/graph.html">
+      <svg id="graphIcon" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round"
+        stroke-linejoin="round" class="icon graph-icon">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+        <path d="M4 18v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
+        <path d="M7 14l3 -3l2 2l3 -3l2 2" />
+      </svg>
+    </a>
+    <svg id="refreshIcon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+      stroke-linejoin="round" class="icon refresh-icon" onclick="fetchRecords()">
+      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+      <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4" />
+      <path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4" />
+    </svg>
 
-</header>
-<main>
-  <div class="table-container">
-    <table id="recordsTable">
-      <thead>
-        <tr>
-          <th>Time</th>
-          <th>Display</th>
-          <th>Sidehull</th>
-          <th>Topphull</th>
-        </tr>
-      </thead>
-      <tbody>
-      <!-- Data rows will be inserted here dynamically -->
-      </tbody>
-    </table>
-  </div>
-</main>
-<footer>
-  <form class="form-input" onsubmit="event.preventDefault();">
-    <div class="stepper">
-      <label for="displayInput">Display</label>
-      <button class="stepper-btn" onclick="changeValue('displayInput',1)">+</button>
-      <input type="number" id="displayInput" value="0" min="0" max="1300">
-      <button class="stepper-btn" onclick="changeValue('displayInput',-1)">-</button>
+  </header>
+  <main>
+    <div class="table-container">
+      <table id="recordsTable">
+        <thead>
+          <tr>
+            <th>Time</th>
+            <th>Display</th>
+            <th>Sidehull</th>
+            <th>Topphull</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Data rows will be inserted here dynamically -->
+        </tbody>
+      </table>
     </div>
-    <div class="stepper">
-      <label for="sideInput">Sidehull</label>
-      <button class="stepper-btn" onclick="changeValue('sideInput',1)">+</button>
-      <input type="number" id="sideInput" value="0" min="0" max="1300">
-      <button class="stepper-btn" onclick="changeValue('sideInput',-1)">-</button>
+  </main>
+  <footer>
+    <form class="form-input" onsubmit="event.preventDefault();">
+      <div class="stepper">
+        <label for="displayInput">Display</label>
+        <button class="stepper-btn" onclick="changeValue('displayInput',1)">+</button>
+        <input type="number" id="displayInput" value="0" min="0" max="1300">
+        <button class="stepper-btn" onclick="changeValue('displayInput',-1)">-</button>
+      </div>
+      <div class="stepper">
+        <label for="sideInput">Sidehull</label>
+        <button class="stepper-btn" onclick="changeValue('sideInput',1)">+</button>
+        <input type="number" id="sideInput" value="0" min="0" max="1300">
+        <button class="stepper-btn" onclick="changeValue('sideInput',-1)">-</button>
+      </div>
+      <div class="stepper">
+        <label for="topInput">Topphull</label>
+        <button class="stepper-btn" onclick="changeValue('topInput',1)">+</button>
+        <input type="number" id="topInput" value="0" min="0" max="1300">
+        <button class="stepper-btn" onclick="changeValue('topInput',-1)">-</button>
+      </div>
+    </form>
+    <button id="trackButton" onclick="track()">Track</button>
+  </footer>
+
+  <!-- The API KEY Modal -->
+  <div id="apiKeyModal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeApiKeyModal()">&times;</span>
+      <h2>Enter API Key</h2>
+      <input type="text" id="apiKeyInput" placeholder="Enter your API key">
+      <button onclick="saveApiKey()">Save</button>
     </div>
-    <div class="stepper">
-      <label for="topInput">Topphull</label>
-      <button class="stepper-btn" onclick="changeValue('topInput',1)">+</button>
-      <input type="number" id="topInput" value="0" min="0" max="1300">
-      <button class="stepper-btn" onclick="changeValue('topInput',-1)">-</button>
+  </div>
+
+  <!-- The Burn Number Modal -->
+  <div id="burnNumberModal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeBurnNumberModal()">&times;</span>
+      <h2>Enter Burn Number</h2>
+      <input type="number" id="burnNumberInput" placeholder="Enter burn number">
+      <button onclick="setBurnNumber()">Save</button>
     </div>
-  </form>
-  <button id="trackButton" onclick="track()">Track</button>
-</footer>
-
-<!-- The API KEY Modal -->
-<div id="apiKeyModal" class="modal">
-  <div class="modal-content">
-    <span class="close" onclick="closeApiKeyModal()">&times;</span>
-    <h2>Enter API Key</h2>
-    <input type="text" id="apiKeyInput" placeholder="Enter your API key">
-    <button onclick="saveApiKey()">Save</button>
   </div>
-</div>
 
-<!-- The Burn Number Modal -->
-<div id="burnNumberModal" class="modal">
-  <div class="modal-content">
-    <span class="close" onclick="closeBurnNumberModal()">&times;</span>
-    <h2>Enter Burn Number</h2>
-    <input type="number" id="burnNumberInput" placeholder="Enter burn number">
-    <button onclick="setBurnNumber()">Save</button>
-  </div>
-</div>
-
-<script type="module" src="js/apiKeyModal.js"></script>
-<script type="module" src="js/burnNumberModal.js"></script>
-<script type="module" src="js/app.js"></script>
+  <script type="module" src="js/apiKeyModal.js"></script>
+  <script type="module" src="js/burnNumberModal.js"></script>
+  <script type="module" src="js/app.js"></script>
 </body>
+
 </html>
